@@ -5,7 +5,8 @@ Version: 0.1-6
 Date: 2008-12-26
 Author: HUANG Ronggui
 Maintainer: HUANG Ronggui <ronggui.huang@gmail.com>
-Depends: R (>= 2.5.0), DBI, RSQLite, RGtk2, gWidgets (>= 0.0-31), gWidgetsRGtk2 (>= 0.0-36)
+Depends: R (>= 2.5.0), DBI, RSQLite, gWidgets (>= 0.0-31), gWidgetsRGtk2 (>= 0.0-36)
+Imports: RGtk2
 Description: R package for Qualitative Data Analysis. Current version only supports plain text.
 License: BSD
 LazyLoad: yes
