@@ -1,0 +1,3 @@
+export(CleanProject,CrossCode,CrossTwo,GetCodingTable,GetFileId,list.deleted,pdelete,relation,RQDA,SearchFiles,SummaryCoding)
+S3method(print,SummaryCoding)
+import(RGtk2)
