@@ -65,7 +65,7 @@ h1 {
 
 <li>Install relevant packages by R command: <I>install.packages(c("DBI","RSQLite","RGtk2","gWidgets","gWidgetsRGtk2"))</I> . 
 
-<li>Install RQDA package: use command: <I>install.packages("RQDA",repos="http://R-Forge.R-project.org")</I>.
+<li>Install RQDA package: use command to install stable version: <I>install.packages("RQDA")</I>. If you want to install the developing version, use command instead: <I>install.packages("RQDA",repos=" http://R-Forge.R-project.org")</I>.
 
 <li>Launch RQDA by command <I>library(RQDA)</I> from within R. Then you can see the RQDA GUI.
 
