@@ -1,3 +1,7 @@
+2009-01-09
+	* Add namespace
+	* RQDA-internal.rd is no loner needed (can be found in rev 57 or version 0.1-6)
+	
 2008-12-28
 	* RQDA needs gWidgets (>= 0.0-31), gWidgetsRGtk2 (>= 0.0-36). Add it to DESCRIPTION file.
 	
